# dsci-310-group-11-pkg

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  MEMBERS  MEMBERS.md  README.md  Untitled.ipynb  pyproject.toml
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/dsci_310_group_11_pkg/: grapher.py  optimize.py  pipeline.py  preprocess.py
test/: test_grapher.py  test_optimize.py  test_pipeline.py  test_preprocess.py
tests/: test_dsci_310_group_11_pkg.py
