[tool.poetry]
name = "dsci_310_group_11_pkg"
version = "0.1.0"
description = "package for dsci310 report"
authors = ["Anthony Huang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
