[tool.poetry]
name = "dsci_310_group_11_pkg"
version = "0.1.0"
description = "package for dsci310 report"
authors = ["Anthony Huang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
altair = "^4.2.2"
pandas = "^2.0.0"
pytest = "^7.3.0"
requests = "^2.28.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.10"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
